Workaround maven war plugin preventing jar artifact from being visible to sibling builds

--- a/dos-parent/pom.xml
+++ b/dos-parent/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
+	<module>../dos-war</module>
   	<module>../dos-server</module>
   	<module>../dos-seed-client</module>
   </modules>
