--- a/dos-server/pom.xml
+++ b/dos-server/pom.xml
@@ -40,11 +40,6 @@
 			<version>1.7.5</version>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jcl</artifactId>
-			<version>1.7.5</version>
-		</dependency>
-		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.13</version>
@@ -120,6 +115,11 @@
 			<version>4.2.5.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-c3p0</artifactId>
+			<version>4.2.5.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>${jdbc.groupId}</groupId>
 			<artifactId>${jdbc.artifactId}</artifactId>
 			<version>${jdbc.version}</version>
@@ -161,31 +161,14 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<plugin>
-		       <groupId>org.apache.maven.plugins</groupId>
-		       <artifactId>maven-war-plugin</artifactId>
-		       <version>2.4</version>
-		       <configuration>
-		         	<failOnMissingWebXml>false</failOnMissingWebXml>		        
-					<archiveClasses>true</archiveClasses>
-					<webResources>
-			            <resource>
-			              <directory>src/main/resources</directory>
-			            </resource>
-			          </webResources>
-		       </configuration>
-		       <executions>
-			    <execution>
-			      <id>war</id>
-			      <phase>package</phase>
-			      <goals>
-			        <goal>war</goal>
-			      </goals>
-			    </execution>
-			  </executions>
-		     </plugin>
 		</plugins>
 	</build>
+	<parent>
+		<groupId>com.lohika</groupId>
+		<artifactId>devops-seed-parent</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../dos-parent</relativePath>
+	</parent>
 	<properties>
 		<jdbc.groupId>mysql</jdbc.groupId>
 		<jdbc.artifactId>mysql-connector-java</jdbc.artifactId>
@@ -196,10 +179,4 @@
 		<jdbc.host>localhost</jdbc.host>
         <jdbc.uri><![CDATA[jdbc:mysql://${jdbc.host}:3306/devopsSeedBackend?createDatabaseIfNotExist=true&amp;characterEncoding=utf8]]></jdbc.uri>
 	</properties>
-	<parent>
-		<groupId>com.lohika</groupId>
-		<artifactId>devops-seed-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../dos-parent</relativePath>
-	</parent>
 </project>
